name:                   ex-lint
version:                0.0.0
author:                 Pat Brisbin <pbrisbin@gmail.com>
maintainer:             Pat Brisbin <pbrisbin@gmail.com>
license:                GPL
license-file:           LICENSE
-- synopsis:               Short description, appears in Hackage listings
-- description:            Long explanation, appears at top of project page
cabal-version:          >= 1.10
build-type:             Simple

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:      ExLint
  other-modules:        ExLint.Example
                      , ExLint.Plugins
                      , ExLint.Plugins.Haskell
                      , ExLint.Types
  build-depends:        base >= 4 && < 5
                      , pandoc >= 1.13 && < 1.14
                      , pandoc-types

executable ex-lint
  default-language:     Haskell2010
  main-is:              main.hs
  ghc-options:          -Wall
  build-depends:        base
                      , ex-lint

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Spec.hs
  build-depends:        base
                      , ex-lint
                      , hspec

source-repository head
  type:                 git
  location:             https://github.com/pbrisbin/ex-lint
